--- a/assets/scss/panelbar.scss
+++ b/assets/scss/panelbar.scss
@@ -8,7 +8,7 @@
   position: fixed;
   left:     0;
   right:    0;
-  z-index:  1001;
+  z-index:  2147483000;
 
   line-height: 1;
 
